# LenovoLegionLinux

kernel_module/: legion-laptop.c
python/legion_linux/: setup.cfg
python/legion_linux/legion_linux/: legion.py  legion_gui_toolkit.desktop  legion_gui_toolkit.policy  legion_gui_toolkit.py  legion_hardware.py  legion_pages.py  legion_ui.py  legion_utils.py
