[metadata]
name = legion_linux
version = 0.0.20
author = johnfan
author_email = johnfan@example.org
description = Control Lenovo Legion laptop
long_description = file: README.md
license = GPL-2.0
license_files = LICENSE
long_description_content_type = text/markdown
url = https://github.com/johnfanv2/LenovoLegionLinux
project_urls =
    Bug Tracker = https://github.com/johnfanv2/LenovoLegionLinux/-/issues
    repository = https://github.com/johnfanv2/LenovoLegionLinux
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find:
install_requires=
    PyQT6
    PyYAML 
    argcomplete
    darkdetect

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    legion_cli= legion_linux.legion_cli:main
    legion_gui= legion_linux.legion_gui:main
    legion_gui_toolkit= legion_linux.legion_gui_toolkit:main

[options.package_data]
* = legion_logo.png, legion_logo_light.png, legion_logo_dark.png, legion_logo_toolkit.png

[options.data_files]
share/pixmaps/ = 
    legion_linux/legion_logo.png
    legion_linux/legion_logo_light.png
    legion_linux/legion_logo_dark.png
    legion_linux/legion_logo_toolkit.png
share/applications/ = 
    legion_linux/legion_gui.desktop
    legion_linux/legion_gui_toolkit.desktop
share/polkit-1/actions/ = 
    legion_linux/legion_cli.policy
    legion_linux/legion_gui.policy
    legion_linux/legion_gui_toolkit.policy
share/legion_linux/ =
    legion_linux/extra/service/legiond.ini
    legion_linux/extra/service/profiles/*
